--- a/web/templates/shared/_layout.html
+++ b/web/templates/shared/_layout.html
@@ -28,6 +28,10 @@
                             <i class="fa fa-home" aria-hidden="true"></i> Главная</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link {%if active_page == 'devices'%}active{% endif %}" href="/devices">
+                            <i class="fa-solid fa-microchip"></i> Устройства</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link {%if active_page == 'broadcast'%}active{% endif %}" href="/broadcast">
                             <i class="fa-solid fa-video"></i> Видеопоток</a>
                     </li>
