--- a/web/templates/stats.html
+++ b/web/templates/stats.html
@@ -7,12 +7,13 @@
     <div class="card-header bg-success text-white fw-bold">
         Таблица участков
     </div>
+
     <div class="card-body p-0">
         <table id="fields" class="table mb-0">
             <thead class="table-light">
                 <tr>
                     <td>Участок</td>
-                    <td>Площадь</td>
+                    <td>Площадь, га</td>
                 </tr>
             </thead>
             <tbody>
@@ -25,13 +26,17 @@
                 {% endfor %}
                 {% else %}
                 <tr class="text-center">
-                    <td colspan="2">В таблице нет данных...</td>
+                    <td colspan="2">В таблице нет данных</td>
                 </tr>
                 {% endif %}
             </tbody>
         </table>
         <div id="pagination-fields" class="p-2"></div>
     </div>
+    <button type="button" class="btn btn-outline-success" data-bs-toggle="modal" data-bs-target="#chartsModal"
+        data-chart="fields" data-fields='{{fields|tojson|safe}}'>
+        <span style="color:rgb(0, 0, 0)">Получить графики</span>
+    </button>
 </div>
 
 <div class="card mb-4 shadow-sm">
@@ -55,7 +60,7 @@
                 {%if operations%}
                 {% for operation in operations %}
                 <tr>
-                    <td>{{ operation.field.name }}</td>
+                    <td>{{ operation.field_name }}</td>
                     <td>{{ operation.operation_type }}</td>
                     <td>{{ operation.start_time }}</td>
                     <td>{{ operation.end_time }}</td>
@@ -66,14 +71,19 @@
                 {% endfor %}
                 {%else%}
                 <tr class="text-center">
-                    <td colspan="7">В таблице нет данных...</td>
+                    <td colspan="7">В таблице нет данных</td>
                 </tr>
                 {%endif%}
             </tbody>
         </table>
         <div id="pagination-operations" class="p-2"></div>
     </div>
+    <button type="button" class="btn btn-outline-success" data-bs-toggle="modal" data-bs-target="#chartsModal"
+        data-chart="operations" data-operations='{{operations|tojson|safe}}'>
+        <span style="color:rgb(0, 0, 0)">Получить графики</span>
+    </button>
 </div>
 
-<script src="/static/js/stats.js"></script>
+{% include "modals/chart.html" %}
+
 {% endblock %}
